--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,33 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  background-color: #282c34;
+  color:white;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  display:block;
+  text-align:center;
+}
+
+section.board {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+article.column {
+  border: 1px solid #fff;
+  width: 33%;
+  border-radius: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+article.column h3 {
+  text-align: center;
+  border-bottom: 1px solid #fff;
+  margin: 0;
+  padding: 20px 0;
 }
+
+
+
