--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: #282c34;
+  background-color: #191E2B;
   color:white;
   display: flex;
   flex-direction: column;
@@ -42,6 +42,52 @@ main {
   margin: 0 auto;
 }
 
+.menu_icon {
+  user-select: none;
+  cursor: pointer;
+  height: 2rem;
+  left: 2rem;
+  position: fixed;
+  top: 2rem;
+  width: 3.6rem;
+  z-index: 2;
+  color:gold;
+}
 
+aside.aside {
+  background: #1E2127;
+  width: 33.3vw;
+  height: 100vh;
+  position: absolute;
+  left: 100vw;
+  -webkit-transition: left 0.5s ease;
+  -moz-transition: left 0.5s ease;
+  -ms-transition: left 0.5s ease;
+  -o-transition: left 0.5s ease;
+  transition: left 0.5s ease;
+}
 
+aside.aside.active {
+  left:66.7vw;
+}
 
+span.menuclose {
+  background: transparent;
+  border: 0px;
+  color: #fff;
+  font-size: 3em;
+  left: 20px;
+  position: relative;
+  -webkit-appearance:none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+form.new_task {
+  padding: 30px;
+}
+
+label.form-label {
+  font-size: 1.5em;
+  font-weight: 700;
+}
