modify endpoints, add quick button

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -21,7 +21,7 @@ span.badge-pill.badge {
 .card .card-footer {
     padding:2px 0;
     display:flex;
-    justify-content:flex-end;
+    justify-content:space-between;
 }
 
 span.material-icons {
